Deploy CEbook backend to Railway

--- a/CEbook/.env.remote
+++ b/CEbook/.env.remote
@@ -3,3 +3,4 @@ DB_HOST=viaduct.proxy.rlwy.net
 DB_NAME=railway
 DB_PASSWORD=ZkbVNgTkAvUBeNMvpaRiTAtYUBBHyiZX
 DB_PORT=5432
+DATABASE_URL=postgresql://postgres:ZkbVNgTkAvUBeNMvpaRiTAtYUBBHyiZX@viaduct.proxy.rlwy.net:5432/railway
