--- a/CEbook/.env.local
+++ b/CEbook/.env.local
@@ -1,5 +1,9 @@
-DB_HOST=localhost
-DB_USER=postgres
-DB_PASSWORD=123
-DB_NAME=cebook
-DB_PORT=5432
+DB_HOST = localhost
+DB_USER = postgres
+DB_PASSWORD = ZcwNndUCiShSkCqcUKYhIhZsKyhoDUZd
+DB_NAME = railway
+
+DB_PORT = 5432
+
+JWT_SECRET=1234
+JWT_EXPIRES_IN=1d
