--- a/CEbook/server/.env
+++ b/CEbook/server/.env
@@ -1,7 +1,7 @@
 DB_HOST = localhost
 DB_USER = postgres
-DB_PASSWORD = 123
-DB_NAME = cebook
+DB_PASSWORD = ZcwNndUCiShSkCqcUKYhIhZsKyhoDUZd
+DB_NAME = railway
 
 DB_PORT = 5432
 
