--- a/CEbook/server/.env
+++ b/CEbook/server/.env
@@ -1,4 +1,4 @@
-DB_HOST = localhost
+DB_HOST = postgres.railway.internal
 DB_USER = postgres
 DB_PASSWORD = ZcwNndUCiShSkCqcUKYhIhZsKyhoDUZd
 DB_NAME = railway
