--- a/CEbook/server/.env
+++ b/CEbook/server/.env
@@ -1,9 +1,4 @@
-DB_HOST = postgres.railway.internal
-DB_USER = postgres
-DB_PASSWORD = ZcwNndUCiShSkCqcUKYhIhZsKyhoDUZd
-DB_NAME = railway
-
-DB_PORT = 5432
-
+DATABASE_URL=postgresql://postgres:ZcwNndUCiShSkCqcUKYhIhZsKyhoDUZd@postgres.railway.internal:5432/railway
 JWT_SECRET=1234
 JWT_EXPIRES_IN=1d
+NODE_ENV=development
