--- a/CEbook/.env.local
+++ b/CEbook/.env.local
@@ -2,6 +2,7 @@ DB_HOST = postgres.railway.internal
 DB_USER = postgres
 DB_PASSWORD = ZcwNndUCiShSkCqcUKYhIhZsKyhoDUZd
 DB_NAME = railway
+DATABASE_URL=postgresql://postgres:ZcwNndUCiShSkCqcUKYhIhZsKyhoDUZd@postgres.railway.internal:5432/railway
 
 DB_PORT = 5432
 
