chore:fix config & update .env

--- a/CEbook/server/.env
+++ b/CEbook/server/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://postgres:ZcwNndUCiShSkCqcUKYhIhZsKyhoDUZd@postgres.railway.internal:5432/railway
+DATABASE_URL=postgresql://postgres:ZcwNndUCiShSkCqcUKYhIhZsKyhoDUZd@switchback.proxy.rlwy.net:54999/railway
 JWT_SECRET=1234
 JWT_EXPIRES_IN=1d
 NODE_ENV=production  # เปลี่ยนเป็น 'production' สำหรับ deployment
