--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
-DB_HOST=localhost
+DB_HOST=postgres.railway.internal
 DB_USER=postgres
-DB_PASSWORD=123
-DB_NAME=cebook
+DB_PASSWORD=ZcwNndUCiShSkCqcUKYhIhZsKyhoDUZd
+DB_NAME=railway
 DB_PORT=5432
